release: 1.0.6